Adds JaCoCo report dependency and ensure 100% coverage

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'jacoco'
 	id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -33,4 +34,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport // Ensures that the coverage report is generated after tests
+}
+
+jacocoTestReport {
+	dependsOn test // Ensures the tests are run before generating the report
+	reports {
+		html.required = true // HTML report for easy visualization
+	}
 }
