--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.vtkr.app'
+group = 'com.vtkr.scribeit'
 version = '0.0.1-SNAPSHOT'
 
 java {
